--- a/Logistics/LogistForms/CreateOrderForm.xaml
+++ b/Logistics/LogistForms/CreateOrderForm.xaml
@@ -24,7 +24,7 @@
                 </StackPanel>
             </Grid>
             <Grid Grid.Row="1">
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                     <RadioButton TabIndex="0" Style="{StaticResource MaterialDesignTabRadioButtonBottom}" BorderBrush="{DynamicResource PrimaryHueMidBrush}" Name="firstTab" Checked="TabChecked" Width="140" Content="Откуда"/>
                     <RadioButton TabIndex="1" Style="{StaticResource MaterialDesignTabRadioButtonBottom}" BorderBrush="{DynamicResource PrimaryHueMidBrush}" Checked="TabChecked" Width="140" Content="Куда"/>
                     <RadioButton TabIndex="2" Style="{StaticResource MaterialDesignTabRadioButtonBottom}" BorderBrush="{DynamicResource PrimaryHueMidBrush}" Checked="TabChecked" Width="140" Content="Грузы"/>
@@ -32,7 +32,7 @@
                 </StackPanel>
             </Grid>
             <Grid Grid.Row="2">
-                <TabControl Name="createTab">
+                <TabControl Name="createTab" Background="{StaticResource SecondaryHueMidBrush}">
                     <TabControl.ItemContainerStyle>
                         <Style TargetType="{x:Type TabItem}">
                             <Setter Property="Visibility" Value="Collapsed"/>
@@ -55,7 +55,7 @@
                                             <RowDefinition Height="auto"/>
                                             <RowDefinition/>
                                         </Grid.RowDefinitions>
-                                        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="0,2,0,0">
+                                        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="0,0,0,7">
                                             <Button Style="{StaticResource MaterialDesignIconButton}" Background="{StaticResource PrimaryHueLightBrush}" Click="AddCustomerClick"  Height="25" Width="25">
                                                 <materialDesign:PackIcon Kind="Add" HorizontalAlignment="Center" VerticalAlignment="Center" Height="20" Width="20" Foreground="{StaticResource  MaterialDesignBackground}"/>
                                             </Button>
@@ -127,7 +127,7 @@
                                             <RowDefinition Height="auto"/>
                                             <RowDefinition/>
                                         </Grid.RowDefinitions>
-                                        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="0,2,0,0">
+                                        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="0,0,0,7">
                                             <Button Style="{StaticResource MaterialDesignIconButton}" Click="AddCustomerClick" Background="{StaticResource PrimaryHueLightBrush}" Height="25" Width="25">
                                                 <materialDesign:PackIcon Kind="Add" HorizontalAlignment="Center" VerticalAlignment="Center" Height="20" Width="20" Foreground="{StaticResource  MaterialDesignBackground}"/>
                                             </Button>
@@ -194,7 +194,7 @@
                                         <RowDefinition Height="auto"/>
                                         <RowDefinition/>
                                     </Grid.RowDefinitions>
-                                    <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="0,2,0,0">
+                                    <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="0,0,0,7">
                                         <Button Click="AddCargoClick" Style="{StaticResource MaterialDesignIconButton}" Background="{StaticResource PrimaryHueLightBrush}" Height="25" Width="25">
                                             <materialDesign:PackIcon Kind="Add" HorizontalAlignment="Center" VerticalAlignment="Center" Height="20" Width="20" Foreground="{StaticResource  MaterialDesignBackground}"/>
                                         </Button>
