--- a/Logistics/LogistForms/CreateRouteForm.xaml
+++ b/Logistics/LogistForms/CreateRouteForm.xaml
@@ -25,7 +25,7 @@
                 </StackPanel>
             </Grid>
             <Grid Grid.Row="1">
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                     <RadioButton TabIndex="0" Style="{StaticResource MaterialDesignTabRadioButtonBottom}" BorderBrush="{DynamicResource PrimaryHueMidBrush}" Name="firstTab" Checked="TabChecked" Width="170" Content="Выбор транспорта"/>
                     <RadioButton TabIndex="1" Style="{StaticResource MaterialDesignTabRadioButtonBottom}" BorderBrush="{DynamicResource PrimaryHueMidBrush}" Checked="TabChecked" Width="170" Content="Выбор прицепа"/>
                     <RadioButton TabIndex="2" Style="{StaticResource MaterialDesignTabRadioButtonBottom}" BorderBrush="{DynamicResource PrimaryHueMidBrush}" Checked="TabChecked" Width="170" Content="Выбор грузов"/>
@@ -33,7 +33,7 @@
                 </StackPanel>
             </Grid>
             <Grid Grid.Row="2">
-                <TabControl Name="createTab">
+                <TabControl Name="createTab" Background="{StaticResource SecondaryHueMidBrush}">
                     <TabControl.ItemContainerStyle>
                         <Style TargetType="{x:Type TabItem}">
                             <Setter Property="Visibility" Value="Collapsed"/>
@@ -184,7 +184,7 @@
                                             <RowDefinition Height="auto"/>
                                             <RowDefinition/>
                                         </Grid.RowDefinitions>
-                                        <TextBlock Grid.Row="0" Text="Доступные грузы" FontSize="16" Foreground="{StaticResource MaterialDesignTextAreaBorder}"/>
+                                        <TextBlock Grid.Row="0" Text="Доступные грузы" FontSize="16" Margin="0,0,0,5" Foreground="{StaticResource MaterialDesignTextAreaBorder}"/>
                                         <DataGrid Grid.Row="1" Name="availebleCargoes" MinColumnWidth="50" MaxColumnWidth="300" CanUserAddRows="False" IsReadOnly="True" AutoGenerateColumns="False">
                                              <DataGrid.Columns>
                                                  <DataGridTextColumn Header="Наименование" Binding="{Binding Title}"/>
@@ -207,7 +207,7 @@
                                                 <RowDefinition Height="auto"/>
                                                 <RowDefinition/>
                                             </Grid.RowDefinitions>
-                                            <TextBlock Grid.Row="0" Text="Выбранные грузы" FontSize="16" Foreground="{StaticResource MaterialDesignTextAreaBorder}"/>
+                                        <TextBlock Grid.Row="0" Text="Выбранные грузы" Margin="0,0,0,5"  FontSize="16" Foreground="{StaticResource MaterialDesignTextAreaBorder}"/>
                                         <DataGrid Grid.Row="1" Name="addedCargoes" MinColumnWidth="50" MaxColumnWidth="300" CanUserAddRows="False" IsReadOnly="True" AutoGenerateColumns="False">
                                             <DataGrid.Columns>
                                                 <DataGridTextColumn Header="Наименование" Binding="{Binding Title}"/>
